examples/test/testpolicy4854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4854
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key26: value30
      key33: value26
      key49: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value38
      podSelector:
        matchLabels:
          key41: value0
          key22: value46
          key35: value20
